# edge-os

./: .gitignore  LICENSE  README.md  ROADMAP.md  roadmap.md
.github/workflows/: build-macos.yml  build-windows.yml  gstnice-meson.build
app/: README.md  package-lock.json  package.json
app/pkg-scripts/: postinstall  preinstall
app/scripts/: build-macos-pkg.sh  bundle-gstreamer-mac.sh  install-linux-daemon.sh  install.sh
app/src/: index.html  main.html  setup.html  status.html
app/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/nsis/: install-hook.nsh
app/src-tauri/src/: lib.rs  main.rs
cloud/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  edge-os.service  mix.exs  prod_build.sh  prod_deploy.sh  prod_install.sh  prod_rollback.sh
cloud/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
cloud/lib/: edge_os_cloud.ex  edge_os_cloud_web.ex
cloud/lib/edge_os_cloud/: accounts.ex  application.ex  device.ex  hash_id_helper.ex  ice_servers.ex  mailer.ex  release.ex  remote_ip.ex  repo.ex  system.ex  user_from_auth.ex
cloud/lib/edge_os_cloud/accounts/: team.ex  user.ex  user_actions.ex  user_api_tokens.ex
cloud/lib/edge_os_cloud/device/: edge.ex  edge_activity.ex  edge_custom_metrics.ex  edge_session.ex  edge_status.ex
cloud/lib/edge_os_cloud/sockets/: webrtc_peer.ex
cloud/lib/edge_os_cloud/system/: setting.ex
cloud/lib/edge_os_cloud_web/: endpoint.ex  et_socket.ex  gettext.ex  router.ex  telemetry.ex
cloud/lib/edge_os_cloud_web/auth/: api_auth.ex
cloud/lib/edge_os_cloud_web/controllers/: api_v1_controller.ex  auth_controller.ex  dash_controller.ex  install_controller.ex  page_controller.ex
cloud/lib/edge_os_cloud_web/live/: live_helpers.ex
cloud/lib/edge_os_cloud_web/sockets/: edge_socket.ex  edge_ssh_socket.ex  edge_ssh_utils.ex  edge_tcp_socket.ex  et_socket.ex  ssh_socket_edge.ex  ssh_socket_server.ex  tcp_port_selector.ex  user_ssh_socket.ex  user_tcp_socket.ex
cloud/lib/edge_os_cloud_web/views/: dash_view.ex  error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
cloud/priv/repo/: seeds.exs
cloud/priv/repo/migrations/: 20221116200117_create_edges.exs  20221118063109_add-in-deleted-field-for-edge.exs  20221118221837_create_users.exs  20221118222302_create_teams.exs  20221121013009_create_user_actions.exs  20221123233512_add-in-deleted-field-and-members-field-for-team.exs  20221126073541_add-team-concept-into-edge.exs  20221126174136_rename-team-field-to-team-id.exs  20221128232741_create_edge_sessions.exs  20221130013413_create_settings.exs  20221130190941_create_edge_activities.exs  20221130193923_create-initial-setting-id_hash_salt.exs  20221204191112_use-actions-array-to-log-stages-in-session.exs  20230114080604_store-edge-system-status.exs  20230214051529_db_table_for_custom_metrics.exs  20230508025433_record-gpu-usage.exs  20250108065136_add-in-user-api-tokens.exs
cloud/priv/static/js/: utils.js
cloud/test/: test_helper.exs
cloud/test/edge_os_cloud/: accounts_test.exs  device_test.exs
cloud/test/support/: conn_case.ex  data_case.ex
edge/: .gitignore  Cargo.toml  README.md  dev-mac.sh  docker-compose.yml
edge/src/: camera_manager.rs  camera_pipeline.rs  camera_webrtc.rs  clip_stream.rs  config.rs  edge_system.rs  event_store.rs  main.rs  rtsp_camera.rs  tcp_to_websocket.rs  webrtc_session.rs  yolo.rs
scripts/: build-mac-dmg.sh  windows-service-recovery.ps1
(+52 files in other folders)
