[package]
name = "edge-os-edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static_ssl = ['openssl/vendored']

[dependencies]
log = "0.4"
env_logger = "0.9.0"
futures-util = "0.3.25"
futures-channel = "0.3.25"
url = "2.3.1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
reqwest = "0.11.12"
sysinfo = "0.27.0"
syn = "1.0.104"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
byte-unit = "4.0.18"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.openssl]
optional = true

[dev-dependencies]
actix-rt = "*"
