[package]
name = "edge-os-edge"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures-util = "0.3"
futures-channel = "0.3"
url = "2.3.1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
sysinfo = "0.27.0"
syn = "1.0.104"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
byte-unit = "4.0.18"
regex = "1.8.1"
openssl = { version = "0.10", features = ["vendored"] }
systemd-journal-logger = "1.0.0"
env_logger = "0.10"
webrtc = "0.11"
bytes = "1"
retina = "0.4.19"
openh264 = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
anyhow = "1"
futures = "0.3"
base64 = "0.22"
gstreamer = "0.23"
gstreamer-webrtc = "0.23"
gstreamer-sdp = "0.23"
gstreamer-app = "0.23"
rusqlite = { version = "0.31", features = ["bundled"] }
ort       = { version = "2.0.0-rc.12", features = ["download-binaries"] }

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
actix-rt = "*"
