[package]
name = "edge-os-app"
version = "0.1.0"
edition = "2021"

# lib crate type required by Tauri v2 for mobile support
[lib]
name = "edge_os_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
